Add meta description

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,10 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="description"
+    content="Hi, I'm Leonardo, interested in finding opportunities where I can apply the experience I have developed through professional, academic, and personal projects. This experience has strengthened my problem-solving skills and my ability to work as part of a team, even under pressure. I have a sense of responsibility, initiative, and ease in working with others, and I'm actively seeking to learn new technologies." />
+  <meta name="keywords"
+    content="leonardo fuentes claros, Leonardo Fuentes Claros, Leonardo Fuentes Claros Portfolio, Leonardo Fuentes, frontend developer, backend developer, react, antdesign, bootstrap, node.js, expressjs, typescript, developer, software developer" />
+  <meta name="author" content="Leonardo Fuentes Claros" />
+  <meta property="og:title" content="Leonardo Fuentes Claros Portfolio" />
+  <meta property="og:description"
+    content="Sofware Developer · React · Nodejs · Expressjs · AntDesign · TypeScript · Portfolio of projects and experiences." />
+  <meta property="og:url" content="https://leonardo-fuentes-claros-portfolio.vercel.app/" />
+  <meta property="og:type" content="website" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://leonardo-fuentes-claros-portfolio.vercel.app/" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Leonardo Fuentes Claros Portfolio</title>
 </head>
